--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,9 @@ body {
 .container.show-nav {
     transform: rotate(-20deg);
 }
+.container.show-nav .circle {
+    transform: rotate(-70deg);
+}
 
 .circle-container {
     position: fixed;
@@ -68,4 +71,60 @@ body {
 .content img {
     max-width: 100%;
     width: 50%;
+}
+.content {
+    max-width: 1000px;
+    margin: 50px auto;
+}
+
+.content h1 {
+    margin: 20px 0;
+}
+.content small {
+    color: #555;
+    font-style: italic;
+}
+.content p {
+    color: #333;
+    line-height: 1.5;
+    margin: 10px 0;
+}
+.content h3 {
+    margin: 10px 0;
+}
+.container.show-nav + nav li {
+    transform: translateX(0);
+    transition-delay: 0.3s;
+}
+
+nav {
+    position: fixed;
+    bottom: 40px;
+    left: 0;
+    z-index: 100;
+}
+nav ul {
+    list-style: none;
+    padding-left: 30px;
+}
+nav ul li {
+    text-transform: uppercase;
+    color: #fff;
+    margin: 40px 0;
+    transform: translateX(-100%);
+    transition: all 0.5s;
+}
+
+nav ul li i {
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+nav ul li + li {
+    margin-left: 20px;
+    transform: translateX(-150%);
+}
+nav ul li:last-of-type {
+    margin-left: 50px;
+    transform: translateX(-200%);
 }
